<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_light_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:id="@+id/tvFormTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tambah Motor"
            android:textStyle="bold"
            android:textSize="22sp"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/etName"
            android:hint="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Deskripsi"
            android:inputType="textMultiLine"
            android:gravity="top"
            android:minLines="3"
            android:padding="8dp"
            android:background="@android:drawable/edit_text"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/etPrice"
            android:hint="@string/price"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"/>

        <EditText
            android:id="@+id/etImageUrl"
            android:hint="@string/image_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"/>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_button"
            android:textColor="@color/md_theme_light_onPrimary"/>
    </LinearLayout>
</ScrollView>
